--- a/style.css
+++ b/style.css
@@ -62,8 +62,18 @@ h3 {
     width: 20%;
 }
 
+a:link {
+    color: green;
+    text-decoration: none;
+}
+
+a:visited {
+    color: green;
+    text-decoration: none;
+}
+
 .footer {
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
